--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "htmx": "cp node_modules/htmx.org/dist/htmx.min.js dist/htmx.min.js"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^3.9.2",
     "tailwindcss": "^3.3.3"
   },
