--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ axum = "0.6.20"
 tokio = { version = "1.33.0", features = ["full"] }
 chrono = "0.4.31"
 axum_static = "1.2.2"
+serde = { version = "1.0.188", features = ["derive"] }
+strum = { version = "0.25", features = ["derive"] }
