display test_cases as diff

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_URL="sqlite:data.db"
 ADDRESS=127.0.0.1:3000
+TEMP_IMG_LEFT_DIR=temp_img_left_dir
+TEMP_IMG_RIGHT_DIR=temp_img_right_dir
+TEMP_IMG_DIFF_DIR=temp_img_diff_dir
