--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "radioguard",
   "scripts": {
-    "build": " npm run tailwind && npm run htmx",
+    "build": "npm run tailwind && npm run htmx && npm run diff2html",
     "tailwind": "npx tailwindcss -i ./src/frontend/shared/styles.css -o ./dist/styles.css",
-    "htmx": "cp node_modules/htmx.org/dist/htmx.min.js dist/htmx.min.js"
+    "htmx": "cp node_modules/htmx.org/dist/htmx.min.js dist/htmx.min.js",
+    "diff2html": "cp node_modules/diff2html/bundles/css/diff2html.min.css dist/diff2html.min.css && cp node_modules/diff2html/bundles/js/diff2html-ui.min.js dist/diff2html-ui.min.js"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
@@ -11,6 +12,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "diff2html": "^3.4.45",
     "htmx.org": "^1.9.6"
   }
 }
