--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { version = "1.33.0", features = ["full"] }
 chrono = "0.4.31"
 axum_static = "1.2.2"
 serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 strum = { version = "0.25", features = ["derive"] }
 img_diff = "5.0.0"
 dotenvy = "0.15.7"
