--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "radioguard",
   "scripts": {
-    "build": "npm run tailwind && npm run htmx && npm run diff2html",
+    "build": "npm run tailwind && npm run htmx && npm run diff2html && npm run static",
     "tailwind": "npx tailwindcss -i ./src/frontend/shared/styles.css -o ./dist/styles.css",
     "htmx": "cp node_modules/htmx.org/dist/htmx.min.js dist/htmx.min.js",
-    "diff2html": "cp node_modules/diff2html/bundles/css/diff2html.min.css dist/diff2html.min.css && cp node_modules/diff2html/bundles/js/diff2html-ui.min.js dist/diff2html-ui.min.js"
+    "diff2html": "cp node_modules/diff2html/bundles/css/diff2html.min.css dist/diff2html.min.css && cp node_modules/diff2html/bundles/js/diff2html-ui.min.js dist/diff2html-ui.min.js",
+    "static": "cp static/* dist"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
