--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = "1.0.75"
 askama = "0.12.1"
 axum = "0.6.20"
 tokio = { version = "1.33.0", features = ["full"] }
-chrono = "0.4.31"
+chrono = { version = "0.4.31", features = ["serde"] }
 axum_static = "1.2.2"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
