--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ pretty_env_logger = "0.4"
 
 [package.metadata.bin]
 cargo-watch = { version = "8.4.1" }
+sqlx-cli = { version = "0.7.3", bins = ["sqlx"] }
